src/objects/User.object
<CustomObject>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OM_Deal_Alert_Threshold__c</fullName>
        <inlineHelpText>Enter the value at which you want to be notified of a large deal</inlineHelpText>
        <label>Deal Alert Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OM_Deal_Alerts__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Opt in to receive deal alerts that meet your threshold</inlineHelpText>
        <label>Deal Alerts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OM_Employee_ID__c</fullName>
        <externalId>true</externalId>
        <label>Employee ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Margin_Percentage_Threshold__c</fullName>
        <label>Margin Percentage Threshold</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OM_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt-in</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__GUS_User_Type__c</fullName>
        <description>Full Time Employee - This will be used to identify all FTEs in GUS
Contractor - This will be used to identify all Contractors in GUS
Team User - This will be used to identify all Team Users in GUS
API user - This will be used to identify all API users in GUS</description>
        <label>GUS User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time Employee</fullName>
                </value>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Team User</fullName>
                </value>
                <value>
                    <fullName>API User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Notification_Level__c</fullName>
        <inlineHelpText>Adjusts how often you are sent emails about Work.

Bread &amp; Butter:  User comments and added as an Assignee
Meat &amp; Potatoes: User comments, status changes and added as Assignee
The Whole Enchilada: All notifications (Default)</inlineHelpText>
        <label>Work Notification Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bread &amp; Butter</fullName>
                </value>
                <value>
                    <fullName>Meat &amp; Potatoes</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>The Whole Enchilada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Show_All_Work_Comments__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show All Work Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>agf__Summary__c</fullName>
        <label>Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Team_Member_Allocation__c</fullName>
        <formula>HYPERLINK(&apos;/apex/adm_teammemberallocation?Id=&apos; +  Id, &apos;view&apos; )</formula>
        <label>Team Member Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Wall_Preference__c</fullName>
        <label>Wall Preference</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Work_User_Interface__c</fullName>
        <inlineHelpText>Determines which version of the Work page you will see for Bugs and User Stories.</inlineHelpText>
        <label>Work User Interface</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Classic</fullName>
                </value>
                <value>
                    <fullName>Next Generation</fullName>
                    <default>true</default>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pi__Can_View_Not_Assigned_Prospects__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can View Not Assigned Prospects</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Key__c</fullName>
        <label>Pardot Api Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Api_Version__c</fullName>
        <label>Pardot Api Version</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Id__c</fullName>
        <label>Pardot User Id</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Key__c</fullName>
        <label>Pardot User Key</label>
        <length>100</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_User_Role__c</fullName>
        <label>Pardot User Role</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>OM_Deal_Alert_Threshold</fullName>
        <active>true</active>
        <description>If a user selects that they want to receive deal alerts, they need to specify the threshold amount</description>
        <errorConditionFormula>AND(OM_Deal_Alerts__c,ISBLANK(OM_Deal_Alert_Threshold__c))</errorConditionFormula>
        <errorDisplayField>OM_Deal_Alert_Threshold__c</errorDisplayField>
        <errorMessage>Please enter the threshold at which you would like to receive deal alerts</errorMessage>
    </validationRules>
</CustomObject>